@@ -3,44 +3,24 @@ package Service_Test.BookService_Test.SearchStrategy_Test;
 import Entity.Book;
 import Repository.BookRepository;
 import Service.BookService.SearchStrategy.BookSearchByAuthorStrategy;
+import org.junit.jupiter.api.Test;
 
-import org.junit.jupiter.api.*;
-import java.util.*;
-import static org.junit.jupiter.api.Assertions.*;
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.*;
 
-public class BookSearchByAuthorStrategy_Test
-{
-
-    private BookRepository bookRepository;
-    private BookSearchByAuthorStrategy strategy;
-
-    @BeforeEach
-    void setup()
-    {
-        bookRepository = mock(BookRepository.class);
-        strategy = new BookSearchByAuthorStrategy();
-    }
+public class BookSearchByAuthorStrategy_Test {
 
     @Test
-    void searchBook_goToRepositoryAndReturnsResult()
-    {
-        String author = "bashbosh";
-        List<Book> expectedBooks = Collections.singletonList(mock(Book.class));
-        when(bookRepository.findByAuthorContainingIgnoreCase(author)).thenReturn(expectedBooks);
-        List<Book> result = strategy.searchBook(bookRepository,author);
-        assertSame(expectedBooks,result);
-        verify(bookRepository,times(1)).findByAuthorContainingIgnoreCase(author);
-    }
-
-    @Test
-    void searchBook_RepositoryReturnsEmptyList_ReturnsEmptyList()
-    {
-        String author = "BarboryAuthor";
-        when(bookRepository.findByAuthorContainingIgnoreCase(author)).thenReturn(Collections.emptyList());
-        List<Book> result = strategy.searchBook(bookRepository,author);
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
-        verify(bookRepository,times(1)).findByAuthorContainingIgnoreCase(author);
+    void searchBook_callsRepositoryAndReturnsResult() {
+        BookRepository repo = mock(BookRepository.class);
+        Book book = new Book();
+        book.setAuthor("Mohammad");
+        when(repo.findByAuthorContainingIgnoreCase("Mohammad")).thenReturn(List.of(book));
+        BookSearchByAuthorStrategy strategy = new BookSearchByAuthorStrategy();
+        List<Book> result = strategy.searchBook(repo, "Mohammad");
+        assertEquals(List.of(book), result);
+        verify(repo).findByAuthorContainingIgnoreCase("Mohammad");
     }
 }
