@@ -1,45 +1,24 @@
 package Service_Test.BookService_Test.SearchStrategy_Test;
-
 import Entity.Book;
 import Repository.BookRepository;
 import Service.BookService.SearchStrategy.BookSearchByIsbnStrategy;
-import org.junit.jupiter.api.*;
-import java.util.*;
+import org.junit.jupiter.api.Test;
+
+import java.util.List;
+
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-public class BookSearchByIsbnStrategy_Test
-{
-
-    private BookRepository bookRepository;
-    private BookSearchByIsbnStrategy strategy;
-
-    @BeforeEach
-    void setup()
-    {
-        bookRepository = mock(BookRepository.class);
-        strategy = new BookSearchByIsbnStrategy();
-    }
+public class BookSearchByIsbnStrategy_Test {
 
     @Test
-    void searchBook_GoToRepositoryAndReturnsResult()
-    {
-        String isbn = "0569620188";
-        List<Book> expectedBooks = Collections.singletonList(mock(Book.class));
-        when(bookRepository.findByIsbnContainingIgnoreCase(isbn)).thenReturn(expectedBooks);
-        List<Book> result = strategy.searchBook(bookRepository,isbn);
-        assertSame(expectedBooks,result);
-        verify(bookRepository,times(1)).findByIsbnContainingIgnoreCase(isbn);
-    }
-
-    @Test
-    void searchBook_RepositoryReturnsEmptyList_ReturnsEmptyList()
-    {
-        String isbn = "0599662219";
-        when(bookRepository.findByIsbnContainingIgnoreCase(isbn)).thenReturn(Collections.emptyList());
-        List<Book> result = strategy.searchBook(bookRepository,isbn);
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
-        verify(bookRepository,times(1)).findByIsbnContainingIgnoreCase(isbn);
-    }
-}
+    void searchBook_callsRepositoryAndReturnsResult() {
+        BookRepository repo = mock(BookRepository.class);
+        Book book = new Book();
+        book.setIsbn("12216904");
+        when(repo.findByIsbnContainingIgnoreCase("1234")).thenReturn(List.of(book));
+        BookSearchByIsbnStrategy strategy = new BookSearchByIsbnStrategy();
+        List<Book> result = strategy.searchBook(repo, "1234");
+        assertEquals(List.of(book), result);
+        verify(repo).findByIsbnContainingIgnoreCase("1234");
+    }}
