@@ -1,44 +1,26 @@
 package Service_Test.BookService_Test.SearchStrategy_Test;
 
+
 import Entity.Book;
 import Repository.BookRepository;
 import Service.BookService.SearchStrategy.BookSearchByTitleStrategy;
-import org.junit.jupiter.api.*;
-import java.util.*;
+import org.junit.jupiter.api.Test;
+
+import java.util.List;
+
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-public class BookSearchByTitleStrategy_Test
-{
-    private BookRepository bookRepository;
-    private BookSearchByTitleStrategy strategy;
-
-    @BeforeEach
-    void setup()
-    {
-        bookRepository = mock(BookRepository.class);
-        strategy = new BookSearchByTitleStrategy();
-    }
+public class BookSearchByTitleStrategy_Test {
 
     @Test
-    void searchBook_GoToRepositoryAndReturnsResult()
-    {
-        String title = "abuhalima";
-        List<Book> expected = Collections.singletonList(mock(Book.class));
-        when(bookRepository.findByTitleContainingIgnoreCase(title)).thenReturn(expected);
-        List<Book> result = strategy.searchBook(bookRepository,title);
-        assertSame(expected,result);
-        verify(bookRepository,times(1)).findByTitleContainingIgnoreCase(title);
-    }
-
-    @Test
-    void searchBook_RepositoryReturnsEmptyList_ReturnsEmptyList()
-    {
-        String title = "bashboshnotfound";
-        when(bookRepository.findByTitleContainingIgnoreCase(title)).thenReturn(Collections.emptyList());
-        List<Book> result = strategy.searchBook(bookRepository,title);
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
-        verify(bookRepository,times(1)).findByTitleContainingIgnoreCase(title);
+    void searchBook_callsRepositoryAndReturnsResult() {
+        BookRepository repo = mock(BookRepository.class);
+        Book book = new Book();
+        when(repo.findByTitleContainingIgnoreCase("besho")).thenReturn(List.of(book));
+        BookSearchByTitleStrategy strategy = new BookSearchByTitleStrategy();
+        List<Book> result = strategy.searchBook(repo, "besho");
+        assertEquals(List.of(book), result);
+        verify(repo).findByTitleContainingIgnoreCase("besho");
     }
 }
